<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.search.SearchMatchLeagueActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutToolBar"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="@dimen/size_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSearch"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/size_8dp"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginBottom="@dimen/size_8dp"
            android:layout_marginEnd="@dimen/size_8dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewChooseTypeSearch"
            app:layout_constraintStart_toEndOf="@+id/imageViewBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    app:searchIcon="@drawable/ic_search"
                    android:queryHint="@string/text_search_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewChooseTypeSearch"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_16dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:text="@string/text_match"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMatch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/size_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutToolBar"
        tools:listitem="@layout/item_match" />

    <TextView
        android:id="@+id/textViewSearchNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16dp"
        android:text="@string/text_earch_not_found_please_try_another_keyword"
        android:textAlignment="center"
        android:textSize="@dimen/size_20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutToolBar"
        app:layout_constraintVertical_bias="0.4" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>