<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:contentPadding="@dimen/size_8dp"
    android:layout_marginBottom="@dimen/size_8dp"
    app:cardCornerRadius="@dimen/size_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewLogoTeam"
            android:layout_width="@dimen/size_50dp"
            android:layout_height="@dimen/size_50dp"
            tools:src="@drawable/english_premier_league"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewNameTeam"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_team"
            android:textSize="@dimen/size_20sp"
            android:layout_marginStart="@dimen/size_8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewLogoTeam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewLogoTeam"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewLogoTeam"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>